* Migrated @TablePipe@ and @Table@ from Gremlin
* Simplified the semantics of @HasNextPipe@ (use @Pipe.hasNext()@ to accomplish previous behavior)
* Added @MemoizePipe@ to memoize the mapping of a particular pipe
* Simplified @PipeClosure@ to be purely functional and now named @PipeFunction@
** Renamed @XXXClosurePipe@ to @XXXFunctionPipe@

 ==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-pvc-pipe.png!

h3. Version 0.7 (PVC -- August 1, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.7</version>
</dependency>
```

* Added support for @Vertex.getOutEdges(String...)@ and @Vertex.getInEdges(String...)@
* Updated @AggregatorPipe@ to be fully @SideEffectPipe@ compliant and to respect @getPath()@
* Added @PipeClosure@ to support function-based pipes
* Migrated all the "Gremlin":http://gremlin.tinkerpop.com specific pipes to Pipes
* Refactored package names to align with pipe semantics
* Flipped the meaning of @Filter@, where @true@ means pass, and @false@ means filter
* Added @AggregatorPipe@ @PipeClosure@ to process object prior to insertion into the aggregate collection
* Added temporary fix for @AggregatorPipe@/@LoopPipe@ phenomena
* @IfThenElsePipe@ now requires an @elseFunction@

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-toilet-pipe.png!

h3. Version 0.6 (Toilet -- June 15, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.6</version>
</dependency>
```

* @RangeFilterPipe@ max value is now inclusive
* Added @OptionalPipe@ which is like @BackFilterPipe@, but non-filtering.
* Updated @AggregatorPipe@ to support multiple @setStarts()@

==<hr/>==

!https://github.com/tinkerpop/pipes/raw/master/doc/images/pipes-drain-pipe.png!

h3. Version 0.5 (Drain -- May 8, 2011)

```xml
<dependency>
  <groupId>com.tinkerpop</groupId>
  <artifactId>pipes</artifactId>
  <version>0.5</version>
</dependency>
```
