@@ -1,0 +1,15 @@
+package com.tinkerpop.pipes.util;
+
+/**
+ * @author Marko A. Rodriguez (http://markorodriguez.com)
+ */
+public class Pair<A, B> {
+
+    public final A a;
+    public final B b;
+
+    public Pair(final A a, final B b) {
+        this.a = a;
+        this.b = b;
+    }
+}
