@@ -2,6 +2,7 @@ package com.tinkerpop.pipes.sideeffect;
 
 import com.tinkerpop.pipes.BaseTest;
 import com.tinkerpop.pipes.PipeFunction;
+import com.tinkerpop.pipes.util.Pair;
 
 import java.util.Arrays;
 
@@ -11,15 +12,15 @@ import java.util.Arrays;
 public class ReducePipeTest extends BaseTest {
 
     public void testBasicPipe() {
-        ReducePipe<Integer> pipe = new ReducePipe<Integer>(0, new PipeFunction<ReducePipe<Integer>.Tuple<Integer>, Integer>() {
-            public Integer compute(ReducePipe<Integer>.Tuple<Integer> argument) {
-                return argument.a + argument.b;
+        ReducePipe<String, Integer> pipe = new ReducePipe<String, Integer>(0, new PipeFunction<Pair<String, Integer>, Integer>() {
+            public Integer compute(Pair<String, Integer> argument) {
+                return Integer.parseInt(argument.a) + argument.b;
             }
         });
-        pipe.setStarts(Arrays.asList(1, 2, 3, 4, 5));
+        pipe.setStarts(Arrays.asList("1", "2", "3", "4", "5"));
         int counter = 0;
         while (pipe.hasNext()) {
-            assertEquals(new Integer(++counter), pipe.next());
+            assertEquals(new Integer(++counter), new Integer(Integer.parseInt(pipe.next())));
         }
         assertEquals(counter, 5);
         assertEquals(pipe.getSideEffect(), new Integer(1 + 2 + 3 + 4 + 5));
